--- a/index.html
+++ b/index.html
@@ -5,22 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Pembelian</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
             color: #333;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            min-height: 100vh;
-            padding: 10px;
+            height: 100vh;
         }
 
         .header {
@@ -42,6 +37,7 @@
             max-width: 600px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
         }
 
         h1 {
@@ -72,33 +68,52 @@
             margin-top: 8px;
         }
 
-        select:focus, input[type="text"]:focus {
-            border-color: #8A2BE2;
-            outline: none;
-        }
-
         button {
             background-color: #2114d6;
             color: white;
-            font-size: 18px;
-            font-weight: bold;
+            font-size: 14px; /* Ukuran font lebih kecil */
+            font-weight: normal;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            margin-top: 20px;
+            margin-top: 10px;
+            width: auto;
+            padding: 6px 15px; /* Padding lebih kecil */
+            border-radius: 20px; /* Agar tombol lebih bulat */
+            text-align: center;
         }
 
         button:hover {
             background-color: #1bd5e2;
         }
 
-        .product-description {
-            margin-top: 10px;
+        /* Mengatur posisi tombol agar berada di kiri */
+        .left-button {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            padding: 6px 15px;
+            font-size: 14px;
+            font-weight: normal;
+            background-color: #2114d6;
+            color: white;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .left-button:hover {
+            background-color: #1bd5e2;
+        }
+
+        .info-text {
+            background-color: #e7f4fe;
+            border: 1px solid #90c9e3;
             padding: 15px;
-            background-color: #f9f9f9;
+            margin-top: 20px;
+            margin-bottom: 20px; /* Menambahkan jarak di bawah elemen .info-text */
             border-radius: 8px;
-            font-style: italic;
+            display: none;
             color: #555;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .price {
@@ -107,101 +122,10 @@
             color: #8A2BE2;
             margin-top: 10px;
         }
-
-        .payment-section {
-            display: none;
-        }
-
-        .payment-list {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        .payment-list li {
-            margin-bottom: 10px;
-        }
-
-        .payment-list input[type="radio"] {
-            margin-right: 8px;
-        }
-
-        .payment-list label {
-            font-size: 16px;
-            color: #555;
-        }
-
-        .subcategory-description {
-            margin-top: 10px;
-            font-style: italic;
-            color: #777;
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-radius: 8px;
-            display: none;
-        }
-
-        /* Media Queries for Responsiveness */
-        @media (max-width: 768px) {
-            .container {
-                padding: 20px;
-                margin: 10px;
-            }
-
-            h1 {
-                font-size: 28px;
-            }
-
-            .header {
-                font-size: 28px;
-                padding: 12px 0;
-            }
-
-            button {
-                font-size: 16px;
-                padding: 10px;
-            }
-
-            .section {
-                margin-bottom: 15px;
-            }
-
-            label, select, input[type="text"], button {
-                font-size: 14px;
-                padding: 10px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .header {
-                font-size: 24px;
-                padding: 10px 0;
-            }
-
-            .container {
-                width: 100%;
-                padding: 15px;
-            }
-
-            button {
-                font-size: 14px;
-                padding: 8px;
-            }
-
-            .section {
-                margin-bottom: 12px;
-            }
-
-            label, select, input[type="text"], button {
-                font-size: 14px;
-                padding: 8px;
-            }
-        }
-
     </style>
 </head>
 <body>
 
-    <!-- Header untuk Nama Perusahaan -->
     <div class="header">
         SRC STORE
     </div>
@@ -209,13 +133,21 @@
     <div class="container">
         <h1>SRC STORE</h1>
 
+        <!-- Tombol BACA INI! -->
+        <button onclick="toggleInfo()">BACA INI!</button>
+
+        <!-- Teks yang akan ditampilkan -->
+        <div class="info-text" id="infoText">
+            <p>Ini adalah informasi singkat mengenai layanan yang kami tawarkan di SRC STORE. Kami menyediakan berbagai macam paket untuk memenuhi kebutuhan Anda!</p>
+        </div>
+
         <!-- Kategori Utama -->
         <div class="section">
             <label for="category">Pilih Kategori:</label>
             <select id="category">
                 <option value="">-- Pilih Kategori --</option>
                 <option value="paket_otp">PAKET OTP</option>
-                <option value="paket_nonotp">Paket NON OTP</option>
+                <option value="paket_nonotp">PAKET NON OTP</option>
                 <option value="paket_inject">PAKET INJECT</option>
             </select>
         </div>
@@ -226,11 +158,9 @@
             <select id="subcategory" disabled>
                 <option value="">-- Pilih Sub-Kategori --</option>
             </select>
-            <!-- Deskripsi Sub-Kategori -->
-            <div class="subcategory-description" id="subcategoryDescription"></div>
         </div>
 
-        <!-- Produk berdasarkan kategori dan sub kategori -->
+        <!-- Produk -->
         <div class="section">
             <label for="product">Pilih Produk:</label>
             <select id="product" disabled>
@@ -238,16 +168,13 @@
             </select>
         </div>
 
-        <!-- Deskripsi Produk -->
-        <div class="section product-description" id="productDescription"></div>
-
         <!-- Harga Produk -->
         <div class="section price" id="productPrice"></div>
 
         <!-- Metode Pembayaran -->
-        <div class="section payment-section" id="paymentSection">
+        <div class="section" id="paymentSection" style="display: none;">
             <label for="payment">Pilih Metode Pembayaran:</label>
-            <ul class="payment-list" id="paymentList"></ul>
+            <ul id="paymentList"></ul>
         </div>
 
         <!-- Nomor Tujuan dan Tombol Beli -->
@@ -438,9 +365,7 @@
 
         const categorySelect = document.getElementById('category');
         const subcategorySelect = document.getElementById('subcategory');
-        const subcategoryDescription = document.getElementById('subcategoryDescription');
         const productSelect = document.getElementById('product');
-        const productDescription = document.getElementById('productDescription');
         const productPrice = document.getElementById('productPrice');
         const paymentSection = document.getElementById('paymentSection');
         const paymentList = document.getElementById('paymentList');
@@ -450,19 +375,18 @@
             const category = this.value;
             subcategorySelect.innerHTML = '<option value="">-- Pilih Sub-Kategori --</option>';
             productSelect.innerHTML = '<option value="">-- Pilih Produk --</option>';
-            productDescription.innerHTML = '';
             productPrice.innerHTML = '';
-            subcategoryDescription.style.display = 'none';
             paymentSection.style.display = 'none';
 
             if (category && products[category]) {
-                subcategorySelect.disabled = false;
-                Object.keys(products[category].subcategories).forEach(subcategory => {
+                const subcategories = products[category].subcategories;
+                Object.keys(subcategories).forEach(subcategory => {
                     const option = document.createElement('option');
                     option.value = subcategory;
-                    option.textContent = subcategory.charAt(0).toUpperCase() + subcategory.slice(1);
+                    option.textContent = subcategory;
                     subcategorySelect.appendChild(option);
                 });
+                subcategorySelect.disabled = false;
             } else {
                 subcategorySelect.disabled = true;
             }
@@ -473,54 +397,57 @@
             const category = categorySelect.value;
             const subcategory = this.value;
             productSelect.innerHTML = '<option value="">-- Pilih Produk --</option>';
-            productDescription.innerHTML = '';
             productPrice.innerHTML = '';
             paymentSection.style.display = 'none';
 
-            if (category && subcategory && products[category] && products[category].subcategories[subcategory]) {
-                const description = products[category].subcategories[subcategory][0].subcategoryDescription;
-                subcategoryDescription.textContent = description;
-                subcategoryDescription.style.display = 'block';
-
-                products[category].subcategories[subcategory].forEach(product => {
+            if (category && subcategory && products[category]) {
+                const subcategoryProducts = products[category].subcategories[subcategory];
+                subcategoryProducts.forEach(product => {
                     const option = document.createElement('option');
-                    option.value = product.code; // menggunakan code sebagai value
+                    option.value = product.code;
                     option.textContent = product.name;
                     productSelect.appendChild(option);
                 });
                 productSelect.disabled = false;
             } else {
                 productSelect.disabled = true;
-                subcategoryDescription.style.display = 'none';
             }
         });
 
-        // Fungsi untuk menampilkan deskripsi dan harga produk
+        // Fungsi untuk menampilkan harga dan metode pembayaran
         productSelect.addEventListener('change', function() {
-            const selectedProductCode = this.value;
             const category = categorySelect.value;
             const subcategory = subcategorySelect.value;
-            const selectedProduct = products[category]?.subcategories[subcategory]?.find(product => product.code === selectedProductCode);
-
-            paymentList.innerHTML = '';
-            productDescription.innerHTML = '';
+            const productCode = this.value;
             productPrice.innerHTML = '';
 
-            if (selectedProduct) {
-                productDescription.innerHTML = `<strong>Deskripsi Produk:</strong> ${selectedProduct.description}`;
-                productPrice.innerHTML = `<strong>Harga:</strong> ${selectedProduct.price}`;
-
-                selectedProduct.paymentMethods.forEach(method => {
-                    const li = document.createElement('li');
-                    li.innerHTML = `<input type="radio" id="${method}" name="payment" value="${method}"> <label for="${method}">${method.charAt(0).toUpperCase() + method.slice(1)}</label>`;
-                    paymentList.appendChild(li);
-                });
-
-                paymentSection.style.display = 'block';
-            } else {
-                paymentSection.style.display = 'none';
+            if (category && subcategory && productCode && products[category]) {
+                const subcategoryProducts = products[category].subcategories[subcategory];
+                const product = subcategoryProducts.find(p => p.code === productCode);
+                if (product) {
+                    productPrice.innerHTML = product.price;
+                    paymentSection.style.display = 'block';
+                    paymentList.innerHTML = '';
+                    product.paymentMethods.forEach(method => {
+                        const li = document.createElement('li');
+                        li.innerHTML = `<input type="radio" name="payment" value="${method}" id="${method}"><label for="${method}">${method}</label>`;
+                        paymentList.appendChild(li);
+                    });
+                }
             }
         });
+
+         // Fungsi untuk menampilkan atau menyembunyikan informasi
+         function toggleInfo() {
+            const infoText = document.getElementById('infoText');
+            infoText.style.display = infoText.style.display === 'block' ? 'none' : 'block';
+        }
+
+        // Fungsi untuk submit form
+        function submitForm() {
+            const phone = document.getElementById('phone').value;
+            alert('Nomor tujuan: ' + phone);
+        }
 
         // Fungsi untuk menangani tombol beli
         function submitForm() {
