--- a/index.html
+++ b/index.html
@@ -6,129 +6,161 @@
     <title>Form Pembelian</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-        }
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f9;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start; /* Pastikan konten dimulai dari atas */
+    align-items: flex-start; /* Mengatur konten untuk berada di atas */
+    flex-direction: column;
+    height: 100vh;
+    overflow-x: hidden; /* Menghindari scroll horizontal */
+}
 
-        .header {
-            background-color: #2114d6;
-            color: white;
-            width: 100%;
-            text-align: center;
-            padding: 15px 0;
-            font-size: 32px;
-            font-weight: bold;
-            letter-spacing: 2px;
-            margin-bottom: 30px;
-        }
+.header {
+    background-color: #2114d6;
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    position: fixed; /* Membuat header tetap di atas */
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000; /* Agar header berada di atas konten lainnya */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan agar header lebih menonjol */
+}
 
-        .container {
-            background-color: #fff;
-            padding: 30px;
-            width: 100%;
-            max-width: 600px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            box-sizing: border-box;
-        }
+.container {
+    background-color: #fff;
+    padding: 30px;
+    width: 100%;
+    max-width: 600px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    margin-top: 120px; /* Memberikan ruang untuk header fixed */
+}
 
-        h1 {
-            text-align: center;
-            color: #2114d6;
-            margin-bottom: 20px;
-        }
+h1 {
+    text-align: center;
+    color: #2114d6;
+    margin-bottom: 20px;
+}
 
-        .section {
-            margin-bottom: 20px;
-        }
+.section {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
 
-        label {
-            font-size: 16px;
-            font-weight: bold;
-            margin-bottom: 8px;
-            display: block;
-            color: #555;
-        }
+label {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 8px;
+    display: block;
+    color: #555;
+}
 
-        select, input[type="text"], button {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 16px;
-            box-sizing: border-box;
-            margin-top: 8px;
-        }
+select, input[type="text"], button {
+    width: 100%;
+    min-width: 200px;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    font-size: 16px;
+    box-sizing: border-box;
+    margin-top: 8px;
+    display: inline-block;
+}
 
-        button {
-            background-color: #2114d6;
-            color: white;
-            font-size: 14px; /* Ukuran font lebih kecil */
-            font-weight: normal;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: 10px;
-            width: auto;
-            padding: 6px 15px; /* Padding lebih kecil */
-            border-radius: 20px; /* Agar tombol lebih bulat */
-            text-align: center;
-        }
+button {
+    background-color: #2114d6;
+    color: white;
+    font-size: 14px;
+    font-weight: normal;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 10px;
+    width: auto;
+    padding: 6px 15px;
+    border-radius: 20px;
+    text-align: center;
+}
 
-        button:hover {
-            background-color: #1b61e2;
-        }
+button:hover {
+    background-color: #1b61e2;
+}
 
-        /* Mengatur posisi tombol agar berada di kiri */
-        .left-button {
-            position: absolute;
-            top: 30px;
-            left: 30px;
-            padding: 6px 15px;
-            font-size: 14px;
-            font-weight: normal;
-            background-color: #2114d6;
-            color: white;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+.left-button {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    padding: 6px 15px;
+    font-size: 14px;
+    font-weight: normal;
+    background-color: #2114d6;
+    color: white;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 
-        .left-button:hover {
-            background-color: #1bd5e2;
-        }
+.left-button:hover {
+    background-color: #1bd5e2;
+}
 
-        .info-text {
-            background-color: #e7f4fe;
-            border: 1px solid #90c9e3;
+.info-text {
+    background-color: #e7f4fe;
+    border: 1px solid #90c9e3;
+    padding: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    display: none;
+    color: #555;
+}
 
-            padding: 15px;
-            margin-top: 10px;
-            margin-bottom: 10px; /* Menambahkan jarak di bawah elemen .info-text */
-            border-radius: 8px;
-            display: none;
-            color: #555;
-        }
+.price {
+    font-size: 18px;
+    font-weight: bold;
+    color: #8A2BE2;
+    margin-top: 10px;
+}
 
-        .price {
-            font-size: 18px;
-            font-weight: bold;
-            color: #8A2BE2;
-            margin-top: 10px;
-        }
+.selected-payment {
+    background-color: #4CAF50;
+    color: white;
+}
 
-        .selected-payment {
-            background-color: #4CAF50; /* Warna tombol saat dipilih */
-            color: white;
-        }
-    </style>
+#paymentSection ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+/* Styling untuk kolom deskripsi produk */
+.product-description-container {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    margin-top: 20px;
+    font-size: 14px;
+    color: #555;
+    box-sizing: border-box;
+}
+
+
+    </style>    
 </head>
 <body>
 
@@ -175,8 +207,10 @@
             </select>
         </div>
 
-        <!-- Deskripsi Produk -->
-        <div class="section" id="productDescription" style="margin-top: 10px; color: #555; font-size: 14px;"></div>
+        <!-- Deskripsi Produk dalam Kolom -->
+        <div class="section">
+            <div class="product-description-container" id="productDescription"></div>
+        </div>
 
         <!-- Harga Produk -->
         <div class="section price" id="productPrice"></div>
@@ -207,166 +241,9 @@
                             name: 'EDUKASI 1gb',
                             code: 'XED1',
                             paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ paket edukasi 1gb<br>~ sediakan pulsa/E-wallet 1.000', 
+                            description: '<br>~ paket edukasi 1gb<br>~ sediakan pulsa/E-wallet 1.000<br>asda<br>daf<br>', 
                             price: 'Rp 1.000',
                             subcategoryDescription: 'setelah dor,urusan kita selesai. Cek OTP kamu di https://myxl.nfime.xyz' 
-                        },
-                        { 
-                            name: 'Unlock anggota tambahan Akrab', 
-                            code: 'XAA1',
-                            price: 'Rp 0', 
-                            paymentMethods: ['pulsa'], 
-                            description: '<br>~ Unlock Anggota tambahan akrab<br>~ Sediakan pulsa 20.000' 
-                        },
-                        { 
-                            name: 'Pengelola Akrab S', 
-                            code: 'PS40',
-                            price: 'Rp 10.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ Pengelola akrab S<br>~ Sediakan pulsa/e-wallet 34.000' 
-                        },
-                        { 
-                            name: 'Pengelola Akrab L',
-                            code: 'PL40', 
-                            price: 'Rp 12.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ Pengelola akrab L<br>~ beli di jam tengah malam agar mendapat reward (ga ada jaminan)<br>~ Sediakan pulsa/e-wallet 108.000' 
-                        },
-                        { 
-                            name: 'Pengelola Akrab XL', 
-                            code: 'PXL40',
-                            price: 'Rp 15.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ Pengelola akrab XL<br>~ beli di jam tengah malam agar mendapat reward (ga ada jaminan)<br>~ Sediakan pulsa/e-wallet 168.000' 
-                        },
-                        { 
-                            name: 'Pengelola Akrab XXL', 
-                            code: 'PXXL40',
-                            price: 'Rp 15.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ Pengelola akrab XXL<br>~ beli di jam tengah malam agar mendapat reward (ga ada jaminan)<br>~ Sediakan pulsa/e-wallet 270.000' 
-                        },
-                        { 
-                            name: 'Masa Aktif XL 1 tahun', 
-                            code: 'XMS1TH',
-                            price: 'Rp 15.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ masa aktif selama 12bulan<br>~ masa aktif akan di perpanjang otomatis tiap bulan tidak langsunh 1 tahun<br>~ pilih metode dana,tapi tidak memotong saldo dana' 
-                        }
-                
-                    ]
-                }
-            },
-            paket_nonotp: {
-                subcategories: {
-                    orderfast: [
-                        { 
-                            name: 'Akrab BIG SUPER',
-                            code: 'XLBIGSUPER',
-                            paymentMethods: ['tidak'], 
-                            description: '<br>Area 1 = 30-32GB<br>Area 2 = 35-37GB<br>Area 3 = 48-50GB<br>Area 4 = 88-90GB<br>~ tidak ada refund, jika salah nomro atau apa (tolong teliti)<br>~ jika serasa nomor mempunyai bug 2 pengelola, JANGAN ORDER<br>~ GARANSI 20HARI<br>~ jika terkena kick pengelola lama.. Tidak Ada REINVITE',
-                            price: 'Rp 57.000',
-                            subcategoryDescription: 'PAKET NON OTP, KUOTA LANGSUNG MASUK<br>BISA UNTUK XL/AXIS' 
-                        },
-                        { 
-                            name: 'Akrab XL NO REW (MINI)',
-                            code: 'XLMINI',
-                            paymentMethods: ['tidak'], 
-                            description: '<br>Area 1 = 21.5 GB<br>Area 2 = 25.5 GB<br>Area 3 = 35 GB<br>Area 4 = 59 GB<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
-                            price: 'Rp 56.000'
-                        },
-                        { 
-                            name: 'Akrab XL REW (BIG)',
-                            code: 'XLBIG',
-                            paymentMethods: ['tidak'], 
-                            description: '<br>Area 1 = 33 GB<br>Area 2 = 35 GB<br>Area 3 = 47 GB<br>Area 4 = 73 GB<br>~ Jka bonus myRewards tidak masuk.. silahkan ajukan komplen setelah 1 x 24 jam.. untuk menghindari delay myXL<br>~ jika bonus myRewards tidak masuk.. akan di refund RP 5.000<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
-                            price: 'Rp 59.000'
-                        },
-                        { 
-                            name: 'Akrab XXL REW (JUMBO)',
-                            code: 'XLJUMBO',
-                            paymentMethods: ['tidak'], 
-                            description: '<br>Area 1 = 65 GB<br>Area 2 = 70 GB<br>Area 3 = 83 GB<br>Area 4 = 123 GB<br>~ Jka bonus myRewards tidak masuk.. silahkan ajukan komplen setelah 1 x 24 jam.. untuk menghindari delay myXL<br>~ jika bonus myRewards tidak masuk.. akan di refund RP 5.000<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
-                            price: 'Rp 80.000'
-                        },
-                        { 
-                            name: 'REINVITE (Big,mini,jumbo)',
-                            code: 'REINVITE',
-                            paymentMethods: ['tidak'], 
-                            description: '<br>Area 1 = 65 GB<br>Area 2 = 70 GB<br>Area 3 = 83 GB<br>Area 4 = 123 GB<br>~ Jka bonus myRewards tidak masuk.. silahkan ajukan komplen setelah 1 x 24 jam.. untuk menghindari delay myXL<br>~ jika bonus myRewards tidak masuk.. akan di refund RP 5.000<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
-                            price: 'Rp 0'
-                        },
-                        { 
-                            name: 'Akrab Orderan Fake',
-                            code: 'TESAKRAB',
-                            paymentMethods: ['tidak'], 
-                            description: 'JANGAN DI ORDER',
-                            price: 'Rp 1.000'
-                        }
-                    ],
-                    ordercuan2: [
-                        { 
-                            name: 'Akrab LITE',
-                            code: 'PAKET3',
-                            paymentMethods: ['pulsa'], 
-                            description: '<br>Area 1 = 37GB<br>Area 2 = 42GB<br>Area 3 = 55GB<br>Area 4 = 95GB<br>~ Di Proses Otomatis oleh sistem<br>~ Masa aktif random 28 - 30 hari<br>~ Garansi 7 Hari untuk Paket ini<br>~ Garansi berlaku jika tidak ada BUG pengelola lama<br>~ Tidak ada invite ulang ketika terkena BUG pengelola lama & Kesalahan Nomer<br>~ Unreg Akrab wajib MyXL',
-                            price: 'Rp 55.000'
-                        },
-                        { 
-                            name: 'Akrab PLUS',
-                            code: 'PAKET4',
-                            paymentMethods: ['pulsa'], 
-                            description: '<br>Area 1 = 38GB<br>Area 2 = 44GB<br>Area 3 = 60GB<br>Area 4 = 103GB<br>~ Di Proses Otomatis oleh sistem<br>~ Masa aktif random 28 - 30 hari<br>~ Garansi 5 Hari untuk Paket ini<br>~ Garansi berlaku jika tidak ada BUG pengelola lama<br>~ Tidak ada invite ulang ketika terkena BUG pengelola lama & Kesalahan Nomer<br>~ Unreg Akrab wajib MyXL',
-                            price: 'Rp 56.000'
-                        }
-                    ]
-                }
-            },
-            paket_inject: {
-                subcategories: {
-                    ordercuan: [
-                        { 
-                            name: 'Xtra Combo Special', 
-                            code: 'PAKET1',
-                            price: 'Rp 5.000', 
-                            paymentMethods: ['dana', 'gopay'], 
-                            description: '<br>~ Untuk syarat Xtra Unlimited Turbo<br>~ Kuota up to 8GB tergantung Hoki<br>~ memotong e-wallet 16.850',
-                            subcategoryDescription: 'setelah dor,urusan kita selesai. Cek OTP kamu di https://hijaubiru.my.id' 
-                        },
-                        { 
-                            name: 'Unlimited Turbo Premium', 
-                            code: 'PAKET2',
-                            price: 'Rp 2.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ WhatsApp,Line,Gojek,YouTube,Instagram,Facebook<br>~ Perkiraan Fup 90-100GB<br>~ memotong e-wallet/pulsa 13.500' 
-                        },
-                        { 
-                            name: 'Unlimited Turbo Super', 
-                            code: 'PAKET3',
-                            price: 'Rp 2.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ WhatsApp,Line,Gojek,Instagram,Facebook<br>~ Perkiraan Fup 50-75GB<br>~ memotong e-wallet/pulsa 8.500' 
-                        },
-                        { 
-                            name: 'Unlimited Turbo Standart', 
-                            code: 'PAKET4',
-                            price: 'Rp 1.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ WhatsApp,Line,Gojek,Facebook<br>~ Perkiraan Fup 40-50GB<br>~ memotong e-wallet/pulsa 3.000' 
-                        },
-                        { 
-                            name: 'Unlimited Turbo Basic', 
-                            code: 'PAKET5',
-                            price: 'Rp 1.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ WhatsApp,Line,Gojek<br>~ Perkiraan Fup 20-30GB<br>~ memotong e-wallet/pulsa 500' 
-                        },
-                        { 
-                            name: 'Unlimited Turbo Video', 
-                            code: 'PAKET12',
-                            price: 'Rp 1.000', 
-                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ WhatsApp,Line,Gojek<br>~ Perkiraan Fup 100-200GB<br>~ memotong e-wallet/pulsa 25.000' 
                         }
                     ]
                 }
@@ -493,12 +370,6 @@
         function toggleInfo() {
             const infoText = document.getElementById('infoText');
             infoText.style.display = infoText.style.display === 'none' ? 'block' : 'none';
-        }
-
-        // Fungsi untuk submit form
-        function submitForm() {
-            const phone = document.getElementById('phone').value;
-            alert('Nomor tujuan: ' + phone);
         }
 
         // Fungsi untuk menangani tombol beli
