--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             box-sizing: border-box;
             margin-top: 5px; /* Memberikan ruang yang cukup untuk header */
+            margin-bottom: 1px;
             margin-left: auto; /* Menjaga agar konten berada di tengah horizontal */
             margin-right: auto; /* Menjaga agar konten berada di tengah horizontal */
             position: relative; /* Menjaga container tetap berada di tempat */
