--- a/index.html
+++ b/index.html
@@ -218,9 +218,10 @@ button:hover {
       { name: 'Indosat 70.000', code: 'indosat70' },
       { name: 'Indosat 80.000', code: 'indosat80' },
       { name: 'Indosat 90.000', code: 'indosat90' },
-      { name: 'Indosat 100.000', code: 'indosat100' },
-      { name: 'Indosat 125.000', code: 'indosat125' },
-      { name: 'Indosat 200.000', code: 'indosat200' }
+      { name: 'Indosat 100.000', code: 'int100' },
+      { name: 'Indosat 100.000', code: 'int150' },
+      { name: 'Indosat 125.000', code: 'int125' },
+      { name: 'Indosat 200.000', code: 'int200' }
     ],
     smartfren: [
       { name: 'Smartfren 5.000', code: 'sm5' },
@@ -284,9 +285,9 @@ button:hover {
       { name: 'Three 80.000', code: 'tri80' },
       { name: 'Three 90.000', code: 'tri90' },
       { name: 'Three 100.000', code: 'tri100' },
-      { name: 'Three 125.000', code: 'tri125' },
-      { name: 'Three 150.000', code: 'tri150' },
-      { name: 'Three 200.000', code: 'tri200' }
+      { name: 'Three 125.000', code: 'trit125' },
+      { name: 'Three 150.000', code: 'trit150' },
+      { name: 'Three 200.000', code: 'trit200' }
     ],
     byu: [
       { name: 'by.U 5.000', code: 'by5' },
@@ -603,6 +604,8 @@ button:hover {
       { name: 'Free Fire 300 Diamond', code: 'ff300' },
       { name: 'Free Fire 355 Diamond', code: 'ff355' },
       { name: 'Free Fire 400 Diamond', code: 'ff400' },
+      { name: 'Free Fire 425 Diamond', code: 'ff425' },
+      { name: 'Free Fire 475 Diamond', code: 'ff475' },
       { name: 'Free Fire 500 Diamond', code: 'ff500' },
       { name: 'Free Fire 520 Diamond', code: 'ff520' },
       { name: 'Free Fire 565 Diamond', code: 'ff565' },
