--- a/index.html
+++ b/index.html
@@ -597,6 +597,7 @@ button:hover {
       { name: 'Free Fire 80 Diamond', code: 'ff80' },
       { name: 'Free Fire 90 Diamond', code: 'ff90' },
       { name: 'Free Fire 100 Diamond', code: 'ff100' },
+      { name: 'Free Fire 140 Diamond', code: 'ff140' },
       { name: 'Free Fire 160 Diamond', code: 'ff160' },
       { name: 'Free Fire 190 Diamond', code: 'ff190' },
       { name: 'Free Fire 210 Diamond', code: 'ff210' },
